--- a/base/templates/inscrever.html
+++ b/base/templates/inscrever.html
@@ -1,5 +1,5 @@
-
 <!doctype html>
+{% load bootstrap5 %}
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -88,7 +88,18 @@
     </div>
   </div>
   <div class="row m-2">
-    
+    <div class="col-md-6">
+      {% if sucesso %}
+      <div class="alert alert-success">Inscrição enviada com sucesso!</div>
+      {% else %}
+      <form action="" method="post">
+        {% csrf_token %}
+        {% bootstrap_form form %}
+        <hr>
+        <button class="btn btn-primary" type="submit">Enviar</button>
+      </form>
+      {% endif %}
+    </div>
   </div>
 </main>
 
